<resources>
    <string name="app_name">Journey Planner</string>
    <string name="editText_from">From</string>
    <string name="editText_to">To</string>
    <string name="button_change_time">Change time</string>
    <string name="textView_leaving_now">Leaving: Now</string>
    <string name="button_edit_preferences">Edit preferences</string>
    <string name="button_plan_my_journey">Plan my journey</string>
    <string name="button_my_journeys">My journeys</string>
    <string name="textView_search_results">Search Results</string>
    <string name="textView_from">From</string>
    <string name="textView_to">To</string>
    <string name="button_save">Save</string>
    <string name="button_show_map">Map</string>
    <string name="textView_start_time">Start Time:\n%s</string>
    <string name="textView_arrival_time">Arrival Time:\n%s</string>
    <string name="textView_legs">Legs:\n%s</string>
    <string name="textView_duration">%s%s</string>
    <string name="textView_leg">Leg:\n%s</string>
    <string name="textView_arrival_point">Arrival Point:\n%s</string>
    <string name="textView_departure_point">Departure Point:\n%s</string>
    <string name="mins">mins</string>
    <string name="retry">Retry</string>
    <string name="textView_start_and_arrival_time">%s - %s</string>
    <string name="textView_duration_and_stops">%s%s%12s</string>
    <string name="stops">Stops:</string>
    <string name="textView_departure_point_and_time">%s at %s</string>
    <string name="textView_arrival_point_and_time">%s at %s</string>
</resources>
